# genesis-vllm-patches

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  CREDITS.md  INSTALL.md  MODELS.md  Makefile  NOTICE  PATCHES.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.example.yml  docker-compose.gemma4-26b-moe.yml  docker-compose.integration-awq.yml  docker-compose.integration-fp16kv.yml  docker-compose.integration.yml  docker-compose.qwen3-5-dense.yml  docker-compose.unit.yml  genesis_bench_v3.py  genesis_context_sweep.py  install.sh  mypy.ini  patch_genesis_unified.py  pyproject.toml  ruff.toml  validate_integration.sh  validate_unit.sh
.github/workflows/: codeql.yml  doc_sync.yml  drift_check.yml  gui_web.yml  lint.yml  pages.yml  pip_audit.yml  release.yml  test.yml  upstream_audit_status.yml  upstream_drift_watcher.yml
benchmarks/2026-04-21_40420_cliff_analysis/: README.md  RESULTS_TABLE.md
benchmarks/archive_v5_v6/: README.md  bench_v5.10_20260419.json  harness_baseline_fp8_v5.7.json  harness_v5.10.json  longbench_awq.jsonl  longbench_fp8.jsonl  longbench_gptq.jsonl  sweep_awq.jsonl  sweep_fp8.jsonl  sweep_gptq.jsonl
benchmarks/harness/: README.md  __init__.py  _common.py  cuda_graph_recapture.py  gsm8k_regression.py  long_context_oom.py  quality_harness.py  run_all.py  tgs_decode.py
benchmarks/v7_10_validation_20260424/: MASTER_SUMMARY.md  README.md
compose/: docker-compose.example.yml  docker-compose.full.yml  docker-compose.gemma4-26b-moe.yml  docker-compose.integration-awq.yml  docker-compose.integration-fp16kv.yml  docker-compose.integration.yml  docker-compose.qwen3-5-dense.yml  docker-compose.test-v11.yml  docker-compose.unit.yml  long-ctx-27b.yml  prod-27b-tq-multiconc.yml  prod-27b-tq.yml  prod-35b-multiconc.yml  prod-35b.yml
compose/_archive/: README.md
deploy/memory/: .dockerignore  Dockerfile  README.md  entrypoint.sh  run.sh
docs/: ANCHOR_SOT.md  BENCHMARKS.md  BENCHMARK_GUIDE.md  BOTS_SETUP.md  CLIFFS.md  CLI_REFERENCE.md  COMMANDS.md  COMMUNITY_PATCHES.md  COMPATIBILITY.md  CONFIGS.md  CONFIGS_AUTO.md  CONFIGS_FOR_COMMUNITY.md  CONFIGURATION.md  CONFIG_SYSTEM_V2.md  CONTRIBUTING.md  COOKBOOK.md  CORE_ENGINE_BOUNDARY.md  CREDITS.md  DAY_1_CHECKLIST.md  DISCUSSION_DRAFT_NOONGHUNNA.md  FAQ.md  GDN_KERNEL_FUSION_DESIGN.md  GLOSSARY.md  GUI.md  HARDWARE.md  INSTALL.md  LICENSE_POLICY.md  MIGRATION_V11_RENAME.md  MODELS.md  MODEL_CONFIG_LAUNCHER.md  OOM_RECIPES.md  PATCHES.md  PATCHES_AUTO.md  PATCH_DESIGNS.md  PATCH_PLAN.md  PATH_C_TIER_AWARE_KV_CACHE.md  PIN_BUMP_PLAYBOOK.md  PLUGINS.md  PR45413_QWEN3_PARSER_DEEPDIFF_PREP.md  PRESETS.md  (+15 more)
docs/_adr/: 0001-multi-engine-refactor.md
docs/changelog/: v12.0.0.md
docs/design/: memory-engine-lean-build.md  (+3 more)
examples/genesis-plugin-hello-world/: README.md  pyproject.toml
examples/genesis-plugin-hello-world/genesis_plugin_hello_world/: __init__.py  plugin.py
external_probe/: README.md  patch_40074_iooo.py
genesis_vllm_plugin/: pyproject.toml
genesis_vllm_plugin/genesis_v7/: __init__.py
gui/: GUI_ROADMAP.md  SNDR_CHAT_WEBSEARCH_HANDOFF.md
p67_dev/: p67_kernel_v1.py  p67_kernel_v2.py  p67_kernel_v3.py  p67_kernel_v4.py  p67_kernel_v8.py  p67_reference.py  p67_test_concurrent.py  p67_test_ieee_precision.py  p67_test_kernel_v1.py  p67_test_kernel_v2.py  p67_test_kernel_v3.py  p67_test_kernel_v4.py  p67_test_kernel_v8.py  p67_test_long_context.py  p67_test_long_prior.py  p67_test_reference.py  p67_test_tool_call.py  p67_test_v727_unified.py  p67_test_wrapper_e2e.py
reference/: pr_40792_k8v4_gqa_grouping.diff  pr_40798_workspace_manager.diff
release/: constraints.txt
schemas/: patch_entry.schema.json
scripts/: attach_bench_proof.py  audit_ai_attribution.py  audit_anchor_fragility.py  audit_artifacts.py  audit_bench_methodology.py  audit_config_catalog.py  audit_config_keys.py  audit_english_only.baseline.json  audit_english_only.py  audit_env_flag_consumers.py  audit_external_findings.py  audit_launch_coverage.py  audit_legacy_vs_spec_driven_apply_matrix.py  audit_lifecycle_docstring_sync.py  audit_model_baselines.py  audit_no_hardcoded_paths.py  audit_no_new_v1.py  audit_override_policy.py  audit_patch_attribution.py  audit_phase3_relocation.py  audit_public_docs.py  audit_registry_contract.py  audit_schema_sync.py  audit_shim_window.py  audit_source_refs_in_docs.py  audit_stale_vllm_version_ranges.py  audit_upstream_status.py  audit_upstream_watchlist.py  audit_v1_migration.py  audit_v2_capability_coverage.py  audit_v2_context_length_sanity.py  audit_v2_cross_reference.py  audit_v2_default_on_mismatch.py  audit_v2_env_keys.py  audit_v2_freshness.py  audit_v2_hardware_sanity.py  audit_v2_id_consistency.py  audit_v2_license_coverage.py  audit_v2_modeldef_vs_hardware_pin.py  audit_v2_network_port_consistency.py  (+42 more)
sndr/: env.py  plugin.py  version.py
tests/: conftest.py
tools/: audit_yaml_vs_runtime.sh  bench_decode_tpot_clean_ab.py  check_upstream_drift.py  check_upstream_watchlist.py  drift_check.py  extract_candidate_tree.sh  genesis_bench_suite.py  genesis_chat_matrix_bench.py  genesis_full_bench.py  kv_calc.py  license_keygen.py  lint_cross_patch_allowlist.txt  lint_drift_markers.py  lint_drift_markers_allowlist.txt  migrate_patches.py  migrate_vllm_sndr_core_to_sndr.py  multi_conc_bench.py  phase1_test_harness.sh  phase_final_extended_stress.sh  pin_preflight.py  populate_manifest_md5.py  progressive_context_probe.py  restart_35b_dev371_multiconc.sh  upstream_watchlist.yaml  validate_all_configs.py  validate_all_models.py  verify_patches_runtime.py
tools/genesis_vllm_plugin/: README.md  pyproject.toml
tools/genesis_vllm_plugin/genesis_v7/: __init__.py
(+4329 files in other folders)
