[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-vllm-plugin"
version = "7.0.0.dev0"
description = "Genesis v7.0 runtime patcher for vLLM — registered as vllm.general_plugins entry point so it auto-loads in every process (main/engine-core/worker)."
requires-python = ">=3.10"
authors = [
    {name = "Sandermage(Sander)-Barzov Aleksandr", email = "sander.odessa@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
# No runtime deps — the plugin assumes vllm is available at import time.
# Our orchestrator imports sndr/* which is mounted in the container.
dependencies = []

[project.entry-points."vllm.general_plugins"]
# Official vLLM plugin system automatically calls this at process start —
# in process0, engine core, AND every worker rank. Perfect place for
# Genesis wiring because it runs BEFORE model load and has full access
# to the target vllm.* import tree.
genesis_v7 = "genesis_v7:register"

[project.scripts]
# Two console commands are exposed, routing to the two CLI dispatchers
# (v12: the ``vllm.sndr_core`` namespace moved to top-level ``sndr``):
#
#   `sndr`     — post-rebrand command tree (``sndr.cli.legacy``).
#                Subcommands: launch, doctor, verify, model-config,
#                patches, memory, install, deps, model, upstream, ...
#                Operators should default to this command.
#
#   `genesis`  — legacy compat-layer CLI (``sndr.compat.cli``).
#                Subcommands: doctor, verify, preset, explain, ...
#                Kept for back-compat with v7.x operators and docs.
#
# Both require ``sndr`` on PYTHONPATH (install.sh wires it in;
# alternatively set PYTHONPATH manually).
sndr    = "sndr.cli.legacy:cli_main"
genesis = "sndr.compat.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["genesis_v7*"]
